# ai_news_updater

./: .env.example  .gitignore  0_sqlite_to_articles.py  1_article_to_abstract_md.py  2_abstract_to_summary.py  4_save_to_dropbox.py  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.sh
system_prompt/: abstract_prompt.md  summary_prompt.md
